# ProgPraktikum-ChillCloud

./: LICENSE  README.md
backend/chillcloud-backend/: pyproject.toml
backend/chillcloud-backend/tests/: test_chillcloud_backend.py
configurations/kolla-ansible/: globals.yml  multinode
configurations/kubespray-kubernetes/: inventory.ini
frontend/chillcloud-frontend/: README.md  package-lock.json  package.json
frontend/chillcloud-frontend/public/: index.html
frontend/chillcloud-frontend/src/: App.vue  main.js
frontend/chillcloud-frontend/src/assets/css/: main.scss
frontend/chillcloud-frontend/src/components/: Signup.vue
frontend/chillcloud-frontend/src/router/: index.js
