[tool.poetry]
name = "chillcloud-backend"
version = "0.1.0"
description = ""
authors = ["Sara Kadenaj <sara.kadena@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.2"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
